--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^4.23.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
